deploy/piston/overlays/prod/cors-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: piston-cors
spec:
  headers:
    accessControlAllowMethods:
      - POST
      - OPTIONS
    accessControlAllowHeaders:
      - Content-Type
    accessControlAllowOriginList:
      - https://notebook.kakde.eu
      - https://dev.notebook.kakde.eu
    accessControlMaxAge: 600
    addVaryHeader: true
